Several changes made
git-svn-id: https://op4j.svn.sourceforge.net/svnroot/op4j/trunk/op4j@44 2d6b427a-3b9d-4b24-b9d1-46c41b8758ae