@@ -17,7 +17,7 @@
  * 
  * =============================================================================
  */
-package org.op4j.operations.conversion;
+package org.op4j.functions.conversion;
 
 import java.util.HashSet;
 import java.util.Set;
@@ -35,40 +35,44 @@ import org.op4j.type.Types;
  * @author Daniel Fern&aacute;ndez
  *
  */
-public final class DoubleConverter extends DecimalNumberConverter {
+public final class ByteConverter extends NonDecimalNumberConverter {
 
+    private static final long serialVersionUID = -5279805889263019640L;
 
-    private static final long serialVersionUID = 1820810568585284513L;
-
-
+    
     @Override
     public Type getResultType() {
-        return Types.DOUBLE;
+        return Types.BYTE;
     }
 
     
     @Override
-    protected Set<ArgumentsTypeScheme> registerDecimalNumberMatchedArgumentTypeSchemes() {
+    protected Set<ArgumentsTypeScheme> registerNonDecimalNumberMatchedArgumentTypeSchemes() {
         return new HashSet<ArgumentsTypeScheme>();
     }
 
     
     @Override
-    protected Result doExecuteDecimalNumber(final Arguments arguments) throws Exception {
+    protected Result doExecuteNonDecimalNumber(final Arguments arguments) throws Exception {
         return null;
     }
 
     
     @Override
     protected Number fromNumber(final Number number) throws Exception {
-        return new Double(number.doubleValue());
+        return Byte.valueOf(number.byteValue());
     }
 
-    
+
     @Override
     protected Number fromString(final String string) throws Exception {
-        return Double.valueOf(string);
+        return Byte.valueOf(string);
     }
 
+
+    @Override
+    protected Number fromString(final String string, final int radix) throws Exception {
+        return Byte.valueOf(string, radix);
+    }
 
 }
